--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "deepmerge": "^4.2.2",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "webpack-dev-server": "^3.11.1"
   }
 }
