--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
     "lint": "eslint --ext .js,.vue app/javascript/"
   },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-vue": "^7.4.1",
+    "sass": "^1.32.4",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.4.2",
-    "@mdi/font": "^5.8.55",
-    "eslint": "^7.17.0",
-    "eslint-plugin-vue": "^7.4.1",
-    "sass": "^1.32.4",
     "webpack-dev-server": "^3.11.1"
   },
   "version": "0.1.0",
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
