--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.17.0",
     "eslint-plugin-vue": "^7.4.1",
